Fix visible error images

--- a/frontend/src/@/segments/units/ImageHideOnError/image-hide-on-error.module.css
+++ b/frontend/src/@/segments/units/ImageHideOnError/image-hide-on-error.module.css
@@ -1,6 +1,5 @@
 .base {
     opacity: 0;
-    transition: opacity .2s ease;
     width: 100%;
     height: 100%;
     object-fit: contain;
